<resources>
    <string name="app_name">ExpiryTracker</string>
    <string name="item_name_placeholder">Item Name</string>
    <string name="item_name">Name :</string>
    <string name="expiry_date">Expiry date :</string>
    <string name="reminder_date">Reminder date :</string>
    <string name="notification_time">Notification Time</string>
    <string name="days_left">Days Left</string>
    <string name="added_on">Added on</string>
    <string name="expires_on">Expires on</string>
    <string name="reminder_on">Reminder date</string>
    <string name="name_of_item">Name of Item</string>
    <string name="five_day">5 days reamining</string>
    <string name="sample_date">May 13, 2019</string>
    <string name="notification_settings">Notification Settings</string>

    <string name="edit_item_title">Edit Item</string>
    <string name="add_item_title">Add Item</string>

    <string name="item_name_speech">Tell me item name</string>
    <string name="item_exp_date_speech">Tell me Expiry date</string>
    <string name="item_rem_date_speech">Tell me Reminder date</string>

    <string name="message_enter_all">Please Enter All details</string>
    <string name="message_item_alread_expired">Item Already Expired</string>

    <string name="message_add_photo">Please add a photo</string>

    <string name="message_expiring_tomorrow">Expiring tomorrow</string>
    <string name="message_expiring_today">Expiring today</string>
    <string name="message_expired">Expired!</string>
    <string name="message_days_remaining"> days remaining</string>



</resources>
