<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:elevation="5dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">


        <ImageView
            android:id="@+id/item_track"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:tint="@color/green"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_track_item"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/item_track"
            android:ellipsize="end"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/name_of_item"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:id="@+id/item_days_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/item_track"
            android:text="@string/five_day"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/item_expiry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@color/green"
            android:padding="8dp"
            android:text="@string/sample_date"
            android:textColor="@color/white"
            android:textStyle="bold" />





    </RelativeLayout>

</androidx.cardview.widget.CardView>