<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ViewItemActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/view_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/view_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/view_item_photo"
                app:layout_collapseMode="parallax"
                android:src="@drawable/ic_image_placeholder"
                android:background="@color/darkGray"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="350dp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/view_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title=""
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_daysleft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/days_left"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                    <TextView
                        android:id="@+id/view_days_left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textSize="20sp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_expired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/expired_stamp"

                        />
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/added_on"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                    <TextView
                        android:id="@+id/view_add_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:layout_marginBottom="8dp"/>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/expires_on"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                    <TextView
                        android:id="@+id/view_expiry_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textSize="20sp"
                        android:paddingRight="12dp"
                        android:paddingLeft="12dp"

                        />
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/reminder_on"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                    <TextView
                        android:id="@+id/view_item_reminder_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textSize="20sp"
                        android:paddingRight="12dp"
                        android:paddingLeft="12dp"

                        />
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGray"/>


            </LinearLayout>




        </androidx.cardview.widget.CardView>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_edit_item"
        android:src="@drawable/ic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_margin="16dp"
        app:layout_anchor = "@id/view_app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>