<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditItemActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/edit_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/edit_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/edit_item_photo"
                app:layout_collapseMode="parallax"
                android:src="@drawable/ic_image_placeholder"
                android:background="@color/darkGray"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="350dp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/edit_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>



        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:text="@string/item_name"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_item_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:hint=""
                            android:inputType="text"
                            android:maxLines="1"
                            android:padding="12dp"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/edit_item_name_voice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_mic"
                            android:padding="12dp"
                            android:layout_weight="0.2"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/expiry_date"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/edit_item_expiry_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:textSize="20sp"
                            android:layout_weight="0.60"/>

                        <ImageView
                            android:id="@+id/edit_item_expiry_date_calendar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_calendar"
                            android:padding="12dp"
                            android:layout_weight="0.20"/>
                        <ImageView
                            android:id="@+id/edit_item_expiry_date_voice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_mic"
                            android:padding="12dp"
                            android:layout_weight="0.20"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/reminder_date"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/edit_item_reminder"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:textSize="20sp"
                            android:layout_weight="0.60"/>

                        <ImageView
                            android:id="@+id/edit_item_reminder_calendar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_calendar"
                            android:padding="12dp"
                            android:layout_weight="0.20" />
                        <ImageView
                            android:id="@+id/edit_item_reminder_voice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_mic"
                            android:padding="12dp"
                            android:layout_weight="0.20"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_photo"
        android:src="@drawable/ic_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_margin="16dp"
        app:layout_anchor = "@id/edit_app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>